--- a/html/blog-minibar.html
+++ b/html/blog-minibar.html
@@ -66,7 +66,7 @@
         <option value="">Choose Page</option>
         <option value="index">Topbar</option>
         <option value="blog-topbar">Blog (Topbar)</option>
-        <option value="index-2">Minibar</option>
+        <option value="index">Minibar</option>
         <option value="blog-minibar">Blog (Minibar)</option>
       </select>
     </div>
@@ -90,7 +90,7 @@
     <div class="content">
       <ul class="main-menu">
         <li class="menu-item active">
-          <a href="index-2.html" class="menu-link">
+          <a href="index.html" class="menu-link">
             <span class="icon ti-arrow-left"></span>
             <span class="caption">Back</span>
           </a>
