--- a/html/index.html
+++ b/html/index.html
@@ -88,7 +88,7 @@
         <option value="">Choose Page</option>
         <option value="index">Topbar</option>
         <option value="blog-topbar">Blog (Topbar)</option>
-        <option value="index-2">Minibar</option>
+        <option value="index">Minibar</option>
         <option value="blog-minibar">Blog (Minibar)</option>
       </select>
     </div>
