--- a/html/index.html
+++ b/html/index.html
@@ -441,12 +441,15 @@
             <ul class="timeline mt-4 pr-md-5">
               <li>
                 <div class="title">Jun, 2021 - Current</div>
-                <div class="details">
+                <br class="details">
                   <h5>Senior Full Stack Developer</h5>
                   <small class="fg-theme">Ubeeqo</small>
-                  <br>•Designed UI/UX using Figma and Adobe XD, Developed and implemented UI using React, React-Native and VueJS efficiently and beautifully</br>
-                    •Designed and implemented a RESTful API that improved web application performance and reduced request / response time.</br>
-                    •Mentored and coached junior developers, resulting in a 80% implement following manager and employer’s requirement and improvement in team satisfaction scores and activity score</p>
+                  <br>•Trained and led an Agile team of 5 full-stack developers</br>
+                    •Made technical decisions to build scalable out-of-box solution which worked out for both scalability and tight deadline</br>
+                    •Designed UI/UX using Figma and Adobe XD, Developed and implemented UI using React, React-Native and Vue.js<br>
+                    •Designed Postgres database and MongoDB for multi-tenant, multi-role structure<br>
+                    •Optimized frontend loading speed by 50% by caching, lazy loading and bundling<br>
+                    •Implemented the OPEN-CHAT web SDK for chatbots used by our customers and some animations with Tailwind CSS</p>
                 </div>
               </li>
               <li>
